[gd_scene load_steps=7 format=3 uid="uid://dvten1np70a30"]

[ext_resource type="Script" path="res://MapSelection/MapSelection.gd" id="1_rvxcc"]
[ext_resource type="FontFile" uid="uid://tdbx4x0pdbd3" path="res://font/gunplay rg.otf" id="2_jlecu"]
[ext_resource type="Texture2D" uid="uid://qtad7rjxukye" path="res://image/black-rock-cuts.png" id="2_r8gxy"]
[ext_resource type="Texture2D" uid="uid://cxce7xdxeb3gm" path="res://Art/Map1Art/Background/map1.png" id="4_0ij2x"]
[ext_resource type="Texture2D" uid="uid://dduf80wirs25" path="res://Art/Map2Art/Backgound/map2.png" id="5_33spr"]
[ext_resource type="Texture2D" uid="uid://l1w2xhw87i7i" path="res://Art/Map3Art/Map3.png" id="6_136gi"]

[node name="MapSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rvxcc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1921.0
offset_bottom = 1078.0
texture = ExtResource("2_r8gxy")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 960.0
offset_right = 200.0
offset_bottom = 1023.0
theme_override_fonts/font = ExtResource("2_jlecu")
theme_override_font_sizes/font_size = 40
text = "Back
"

[node name="MapSelect" type="Label" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 59.0
offset_right = 1589.0
offset_bottom = 271.0
scale = Vector2(0.674157, 0.603862)
theme_override_fonts/font = ExtResource("2_jlecu")
theme_override_font_sizes/font_size = 150
text = "MAP SELECT
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map1Holder" type="Panel" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 456.0

[node name="Map1" type="TextureButton" parent="Map1Holder"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 496.0
offset_bottom = 280.0
scale = Vector2(0.466176, 0.499214)
texture_normal = ExtResource("4_0ij2x")
texture_pressed = ExtResource("4_0ij2x")
texture_hover = ExtResource("4_0ij2x")
texture_disabled = ExtResource("4_0ij2x")
texture_focused = ExtResource("4_0ij2x")
ignore_texture_size = true
stretch_mode = 0

[node name="LabelMap1" type="Label" parent="Map1Holder"]
layout_mode = 0
offset_top = 144.0
offset_right = 256.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("2_jlecu")
theme_override_font_sizes/font_size = 30
text = " Map 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map2Holder" type="Panel" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 256.0
offset_right = 1088.0
offset_bottom = 456.0

[node name="Map2" type="TextureButton" parent="Map2Holder"]
layout_mode = 0
offset_left = 16.0
offset_top = 7.99998
offset_right = 416.0
offset_bottom = 248.0
scale = Vector2(0.564947, 0.559058)
toggle_mode = true
texture_normal = ExtResource("5_33spr")
texture_pressed = ExtResource("5_33spr")
texture_hover = ExtResource("5_33spr")
texture_disabled = ExtResource("5_33spr")
texture_focused = ExtResource("5_33spr")
ignore_texture_size = true
stretch_mode = 0

[node name="LabelMap2" type="Label" parent="Map2Holder"]
layout_mode = 0
offset_top = 144.0
offset_right = 256.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("2_jlecu")
theme_override_font_sizes/font_size = 30
text = "Map 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map3Holder" type="Panel" parent="."]
layout_mode = 0
offset_left = 1280.0
offset_top = 256.0
offset_right = 1536.0
offset_bottom = 456.0

[node name="Map3" type="TextureButton" parent="Map3Holder"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 240.0
offset_bottom = 144.0
texture_normal = ExtResource("6_136gi")
texture_pressed = ExtResource("6_136gi")
texture_hover = ExtResource("6_136gi")
texture_disabled = ExtResource("6_136gi")
texture_focused = ExtResource("6_136gi")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Map3Holder"]
layout_mode = 0
offset_top = 144.0
offset_right = 256.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("2_jlecu")
theme_override_font_sizes/font_size = 30
text = "Map 3"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Map1Holder/Map1" to="." method="_on_map_1_pressed"]
[connection signal="pressed" from="Map2Holder/Map2" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Map2Holder/Map2" to="." method="_on_map_2_pressed"]
[connection signal="pressed" from="Map3Holder/Map3" to="." method="_on_map_3_pressed"]
